best paper award

--- a/publication.html
+++ b/publication.html
@@ -46,7 +46,7 @@ IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2021<
 Automatica, Vol. 118, 2020</p>
 <p><i>Adaptive Dynamic Programming for Finite-horizon Optimal Control of Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
-Control Theory and Technology, Vol. 17, No. 1, pp. 73&ndash;84, 2019</p>
+Control Theory and Technology, Vol. 17, No. 1, pp. 73&ndash;84, 2019. <font color=red><b>2020 Best Paper Award.</b></font></p>
 <p><i>ThermalNet: A Deep Reinforcement Learning-based Combustion Optimization System for Coal-fired Boiler.</i> [<a href="https://doi.org/10.1016/j.engappai.2018.07.003">Link</a>]<br />
 Yin Cheng, Yuexin Huang, <b>Bo Pang</b>, Weidong Zhang.<br />
 Engineering Applicaitons of Artificial Intelligence, Vol. 74, pp. 303&ndash;311, 2018</p>
@@ -80,7 +80,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-13 13:37:31 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-07-26 14:24:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
