--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i><br />
 Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
 </td></tr></table>
-<h2>About me</h2>
-<p>I am a Ph.D. candidate at <a href="https://www.nyu.edu/">New York University</a>, working with my supervisor <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
+<h2>About Me</h2>
+<p>I recently obtained Ph.D. degree from the <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of  Elecetrical and Computer Engineering</a>, <a href="https://www.nyu.edu/">New York University</a>, under the supervision of <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
 <p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
 <h2>Education</h2>
 <ul>
-<li><p>Ph.D. Student in Electrical and Computer Engineering, New York University, September 2017 &ndash; Present.</p>
+<li><p>Ph.D. in Electrical Engineering, New York University, September 2017 &ndash; May 2021.</p>
 </li>
 <li><p>M.S. in Automation, Shanghai Jiao Tong University, September 2014 &ndash; March 2017.</p>
 </li>
@@ -58,7 +58,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-26 14:24:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-13 11:19:06 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
