--- a/publication.html
+++ b/publication.html
@@ -27,13 +27,10 @@ Biological Cybernetics, Under Review.</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review</p>
-<p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
-Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2021 IEEE 60th Conference on Decision and Control (CDC2021), Under Review.</p>
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th Birthday, Springer, 2021.</p>
+Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
@@ -57,6 +54,9 @@ International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 201
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
+<p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
+Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2021 IEEE 60th Conference on Decision and Control (CDC2021), Accepted.</p>
 <p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON2021), Accepted.</p>
@@ -80,7 +80,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-07-26 14:24:34 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-08-13 11:19:06 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
