--- a/publication.html
+++ b/publication.html
@@ -26,7 +26,7 @@
 Biological Cybernetics, Under Review.</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-IEEE Transactions on Automatic Control, Under Review</p>
+IEEE Transactions on Automatic Control, Conditionally Accepted.</p>
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -80,7 +80,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-08-13 11:19:06 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-09-23 11:14:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
