--- a/services.html
+++ b/services.html
@@ -38,6 +38,10 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://www.journals.elsevier.com/european-journal-of-control">European Journal of Control</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://cdc2020.ieeecss.org/">IEEE Conference on Decision and Control (CDC) 2020</a></p>
 </li>
 </ul>
@@ -47,6 +51,10 @@
 </ul>
 <ul>
 <li><p><a href="https://www.journals.elsevier.com/neurocomputing">Neurocomputing</a></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.journals.elsevier.com/isa-transactions">ISA Transactions</a></p>
 </li>
 </ul>
 <ul>
@@ -68,7 +76,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-09-23 11:14:18 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-10-09 00:10:48 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
