--- a/services.html
+++ b/services.html
@@ -38,7 +38,7 @@
 </li>
 </ul>
 <ul>
-<li><p><a href="https://www.journals.elsevier.com/european-journal-of-control">European Journal of Control</a></p>
+<li><p><a href="http://ieeecss.org/publication/transactions-control-network-systems">IEEE Transactions on Control of Netowrk Systems</a></p>
 </li>
 </ul>
 <ul>
@@ -76,7 +76,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-10-09 00:10:48 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2021-12-05 00:32:22 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
