--- a/publication.html
+++ b/publication.html
@@ -21,17 +21,20 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers Submitted</h2>
-<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i><br />
-<b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
-Biological Cybernetics, Under Review.</p>
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Conditionally Accepted.</p>
+<p><i>Learning-based Adaptive Optimal Control of Linear Time-Delay Systems.</i><br />
+Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+IEEE Transactions on Automatic Control, Under Review.</p>
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
+<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i><br />
+<b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
+Biological Cybernetics, Accepted, 2022.</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Early Access, 2021.</p>
@@ -54,12 +57,12 @@ International Journal of Fuzzy Systems, Vol. 19, No. 5, pp. 1392&ndash;1405, 201
 <b>Bo Pang</b>, Xiaocheng Liu, Qibing Jin, Weidong Zhang.<br />
 Neurocomputing, Vol. 205, pp. 210&ndash;221, 2016</p>
 <h2>Conference Papers</h2>
-<p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i><br />
+<p><i>Data-Driven Adaptive Optimal Control of Mixed-Traffic Connected Vehicles in a Ring Road.</i> [<a href="https://ieeexplore.ieee.org/abstract/document/9683024?casa_token=hKghBRNzlmUAAAAA:tOu--2y-0jRwcrMkepeN6IpsAghcIbyKjRvq20hAdX5UEbogDeBXCG8lhEoXfB51aJIZ2CPDkik">Link</a>]<br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2021 IEEE 60th Conference on Decision and Control (CDC2021), Accepted.</p>
-<p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i><br />
+2021 IEEE 60th Conference on Decision and Control (CDC2021), pp. 77-82, Austin, TX, USA.</p>
+<p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i> [<a href="https://www.sciencedirect.com/science/article/pii/S2405896321017882">Link</a>]<br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
-2021 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON2021), Accepted.</p>
+2021 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON2021), Vol. 54, no. 14, pp. 370-375.</p>
 <p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), pp. 9303-9311, A Virtual Conference.</p>
@@ -80,7 +83,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-05 00:32:22 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-17 23:47:17 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
