--- a/services.html
+++ b/services.html
@@ -42,6 +42,10 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=9424">IEEE Transactions on Industrial Informatics</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://cdc2020.ieeecss.org/">IEEE Conference on Decision and Control (CDC) 2020</a></p>
 </li>
 </ul>
@@ -76,7 +80,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2021-12-05 00:32:22 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-17 23:47:17 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
