--- a/publication.html
+++ b/publication.html
@@ -32,9 +32,9 @@ IEEE Transactions on Automatic Control, Under Review.</p>
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
-<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i><br />
+<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]<br />
 <b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
-Biological Cybernetics, Accepted, 2022.</p>
+Biological Cybernetics, 2022.</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Early Access, 2021.</p>
@@ -83,7 +83,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-17 23:47:17 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-09 22:10:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
