--- a/services.html
+++ b/services.html
@@ -30,6 +30,10 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=7083369">IEEE Robotics and Automation Letters</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://cis.ieee.org/publications/t-neural-networks-and-learning-systems">IEEE Transactions on Neural Networks and Learning Systems</a></p>
 </li>
 </ul>
@@ -80,7 +84,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-09 22:10:00 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-13 22:29:46 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
