add jd, awards info

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@ Email: <i>bo.pang</i> [@] <i>nyu</i> [DOT] <i>edu</i><br />
 Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I recently obtained Ph.D. degree from the <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of  Elecetrical and Computer Engineering</a>, <a href="https://www.nyu.edu/">New York University</a>, under the supervision of <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
+<p>Starting from Oct. 2021, I joined <a href="https://corporate.jd.com/">JD.COM, Inc</a> as a Doctor Management Trainee.</p>
+<p>I obtained Ph.D. degree from the <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of  Elecetrical and Computer Engineering</a>, <a href="https://www.nyu.edu/">New York University</a>, under the supervision of <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
 <p>My research focuses on decision making under uncertainty, includes but not limited to reinforcement learning, adaptive/approximate dynamic programming, optimal control, stochastic control, model predictive control.</p>
 <h2>Education</h2>
 <ul>
@@ -45,11 +46,11 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
-<li><p><b>Jul. 27th 2021</b> My paper received the 2020 Best Paper Award of the journal <a href="https://www.springer.com/journal/11768">Control Theory and Technology</a>!</p>
+<li><p><b>Apr. 8th 2022</b> I received the the Dante Youla Award for Graduate Research Excellence in Electrical Engineering, New York University!</p>
 </li>
-<li><p><b>Apr. 23rd 2021</b> I succesfully defended my dissertation!</p>
+<li><p><b>Apr. 8th 2022</b> I received the Alexander Hessel Award for the Best Ph.D. Dissertation in Electrical Engineering, New York University!</p>
 </li>
-<li><p><b>Feb. 19th 2021</b> I gave an online one-hour talk to the group of Prof. <a href="https://www.georgejpappas.org/">George J. Pappas</a> in University of Pennsylvania, on my work about robust reinforcement learning.</p>
+<li><p><b>Oct. 22nd 2021</b> I was selected as a member of Doctor Management Trainee (DMT) program at <a href="https://corporate.jd.com/">JD.COM, Inc</a>!</p>
 </li>
 </ul>
 </div></div>
@@ -58,7 +59,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-13 22:29:46 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-10 18:08:40 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
