--- a/publication.html
+++ b/publication.html
@@ -29,7 +29,7 @@ IEEE Transactions on Automatic Control, Under Review.</p>
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
-<p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i><br />
+<p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i> [<a href="https://arxiv.org/abs/2107.07788">arXiv</a>] [<a href="https://github.com/bo-pang/OLSbPI">Code</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Accepted, 2022.</p>
 <p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]<br />
@@ -83,7 +83,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-24 00:54:33 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-01 09:11:40 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
