--- a/publication.html
+++ b/publication.html
@@ -24,6 +24,9 @@
 <p><i>Learning-based Adaptive Optimal Control of Linear Time-Delay Systems.</i><br />
 Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review.</p>
+<p><i>Learning-Based Adaptive Optimal Control of Mixed-Traffic Connected Vehicles.</i><br />
+Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+IEEE Transactions on Intelligent Transportation Systems, Under Review.</p>
 <h2>Book Chapters</h2>
 <p><i>Robust Reinforcement Learning for Stochastic Linear Quadratic Control with Multiplicative Noise.</i> [<a href="https://www.springer.com/gp/book/9783030746278">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
@@ -83,7 +86,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-01 09:11:40 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-06-05 14:42:38 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
