--- a/publication.html
+++ b/publication.html
@@ -66,7 +66,7 @@ Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 <p><i>Learning-Based Control of Multiple Connected Vehicles in the Mixed Traffic by Adaptive Dynamic Programming.</i> [<a href="https://www.sciencedirect.com/science/article/pii/S2405896321017882">Link</a>]<br />
 Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 3rd IFAC Conference on Modelling, Identification and Control of Nonlinear Systems (MICNON2021), Vol. 54, no. 14, pp. 370-375.</p>
-<p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://arxiv.org/abs/2008.11592">arXiv</a>]<br />
+<p><i>Robust Reinforcement Learning: A Case Study in Linear Quadratic Regulation.</i> [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/17122">Link</a>] [<a href="https://github.com/bo-pang/O-LSPI/">Code</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 2021 35th AAAI Conference on Artificial Intelligence (AAAI2021), pp. 9303-9311, A Virtual Conference.</p>
 <p><i>A Data-driven Approach for Constrained Infinite-Horizon Linear Quadratic Regulation.</i> [<a href="https://doi.org/10.1109/CDC42340.2020.9304046">Link</a>]<br />
@@ -86,7 +86,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-06-05 14:42:38 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-07-18 22:53:07 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
