--- a/services.html
+++ b/services.html
@@ -62,11 +62,19 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://www.journals.elsevier.com/applied-energy">Applied Energy</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://www.journals.elsevier.com/isa-transactions">ISA Transactions</a></p>
 </li>
 </ul>
 <ul>
 <li><p><a href="https://www.springer.com/journal/40815">International Journal of Fuzzy Systems</a></p>
+</li>
+</ul>
+<ul>
+<li><p><a href="https://www.springer.com/journal/11432">Science China Information Sciences</a></p>
 </li>
 </ul>
 <p>Teaching assistant for</p>
@@ -84,7 +92,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-07-18 22:53:07 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-02 22:03:28 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
