--- a/publication.html
+++ b/publication.html
@@ -35,7 +35,8 @@ Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="
 <p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i> [<a href="https://arxiv.org/abs/2107.07788">arXiv</a>] [<a href="https://github.com/bo-pang/OLSbPI">Code</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Accepted, 2022.</p>
-<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]<br />
+<p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]
+[<a href="https://github.com/bo-pang/Sensorimotor_Control">Code</a>]<br />
 <b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
 Biological Cybernetics, 2022.</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
@@ -86,7 +87,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-02 22:03:28 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-08-02 22:42:04 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
