--- a/services.html
+++ b/services.html
@@ -30,6 +30,10 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://www.sciencedirect.com/journal/systems-and-control-letters">Systems & Control Letters</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://ieeexplore.ieee.org/xpl/aboutJournal.jsp?punumber=7083369">IEEE Robotics and Automation Letters</a></p>
 </li>
 </ul>
@@ -92,7 +96,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-08-02 22:42:04 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-14 22:12:06 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
