add periodic_VI code

--- a/publication.html
+++ b/publication.html
@@ -42,7 +42,8 @@ Biological Cybernetics, 2022.</p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Early Access, 2021.</p>
-<p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]<br />
+<p><i>Adaptive Optimal Control of Linear Periodic Systems: An Off-Policy Value Iteration Approach.</i> [<a href="https://doi.org/10.1109/TAC.2020.2987313">Link</a>]
+[<a href="https://github.com/bo-pang/periodic_value_iteration/">Code</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2021</p>
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
@@ -87,7 +88,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-14 22:12:06 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-14 23:07:25 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
