add time_varying ADP code

--- a/publication.html
+++ b/publication.html
@@ -32,7 +32,7 @@ IEEE Transactions on Intelligent Transportation Systems, Under Review.</p>
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 Book chapter in Trends in Nonlinear and Adaptive Control: A Tribute to <a href="https://cas.mines-paristech.fr/~praly/">Laurent Praly</a> for his 65th birthday, Springer, 2021.</p>
 <h2>Journal Papers</h2>
-<p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i> [<a href="https://arxiv.org/abs/2107.07788">arXiv</a>] [<a href="https://github.com/bo-pang/OLSbPI">Code</a>]<br />
+<p><i>Reinforcement Learning for Optimal Stationary Control of Linear Stochastic Systems.</i> [<a href="https://ieeexplore.ieee.org/abstract/document/9767669">Link</a>] [<a href="https://github.com/bo-pang/OLSbPI">Code</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Accepted, 2022.</p>
 <p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]
@@ -49,7 +49,7 @@ IEEE Transactions on Automatic Control, Vol. 66, No. 2, pp. 888&ndash;894, 2021<
 <p><i>Reinforcement Learning for Adaptive Control of Continuous-time Linear Periodic Systems.</i> [<a href="https://doi.org/10.1016/j.automatica.2020.109035">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 Automatica, Vol. 118, 2020</p>
-<p><i>Adaptive Dynamic Programming for Finite-horizon Optimal Control of Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>]<br />
+<p><i>Adaptive Dynamic Programming for Finite-horizon Optimal Control of Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1007/s11768-019-8168-8">Link</a>][<a href="https://github.com/bo-pang/time_varying_ADP/">Code</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 Control Theory and Technology, Vol. 17, No. 1, pp. 73&ndash;84, 2019. <font color=red><b>2020 Best Paper Award.</b></font></p>
 <p><i>ThermalNet: A Deep Reinforcement Learning-based Combustion Optimization System for Coal-fired Boiler.</i> [<a href="https://doi.org/10.1016/j.engappai.2018.07.003">Link</a>]<br />
@@ -77,7 +77,8 @@ Tong Liu, Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 <p><i>Reinforcement Learning for Adaptive Periodic Linear Quadratic Control.</i> [<a href="https://doi.org/10.1109/CDC40024.2019.9030252">Link</a>]<br />
 <b>Bo Pang</b>, Zhong-Ping Jiang, Iven Mareels.<br />
 2019 IEEE 58th Conference on Decision and Control (CDC2019), pp. 3322&ndash;3327, Nice, France.</p>
-<p><i>Data-driven Finite-horizon Optimal Control for Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1109/CDC.2018.8619347">Link</a>]<br />
+<p><i>Data-driven Finite-horizon Optimal Control for Linear Time-varying Discrete-time Systems.</i> [<a href="https://doi.org/10.1109/CDC.2018.8619347">Link</a>]
+[<a href="https://github.com/bo-pang/time_varying_ADP/">Code</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 2018 IEEE 57th Conference on Decision and Control (CDC2018), pp. 861&ndash;866, Miami Beach, FL, USA.</p>
 <p><i>Output Tracking of Boiler-turbine System by Fuzzy Guaranteed Cost Control.</i> [<a href="https://doi.org/10.1109/ChiCC.2016.7553933">Link</a>]<br />
@@ -88,7 +89,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-14 23:07:25 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-09-18 00:32:47 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
