--- a/services.html
+++ b/services.html
@@ -78,6 +78,10 @@
 </li>
 </ul>
 <ul>
+<li><p><a href="https://www.sciencedirect.com/journal/applied-mathematics-and-computation">Applied Mathematics and Computation</a></p>
+</li>
+</ul>
+<ul>
 <li><p><a href="https://www.springer.com/journal/11432">Science China Information Sciences</a></p>
 </li>
 </ul>
@@ -96,7 +100,7 @@
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-09-18 09:59:04 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-10-29 10:35:45 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
