--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar</a>, <a href="https://www.zhihu.com/people/qiu-shui-20-54">Zhihu (知乎)</a></p>
 </td></tr></table>
 <h2>About Me</h2>
-<p>I am working as an algorithmic engineer in Planning & Control group, autonomous driving division, <a href="https://corporate.jd.com/">JD.COM, Inc</a>. Before that, I participated in a half-a-year-long rotation training in the same company as a Doctor Management Trainee.</p>
+<p>I am working as an algorithmic engineer in Planning & Control group, Autonomous Driving Division, <a href="https://corporate.jd.com/">JD.COM, Inc</a>. Before that, I participated in a half-a-year-long rotation training in the same company as a Doctor Management Trainee.</p>
 <p>I obtained Ph.D. degree from the <a href="https://engineering.nyu.edu/academics/departments/electrical-and-computer-engineering">Department of  Elecetrical and Computer Engineering</a>, <a href="https://www.nyu.edu/">New York University</a>, under the supervision of <a href="https://engineering.nyu.edu/faculty/zhong-ping-jiang">Prof. Zhong-Ping Jiang</a>. I received my Master's degree in Automation from <a href="http://en.sjtu.edu.cn/">Shanghai Jiao Tong University</a>, Shanghai, China, where I was advised by <a href="http://www.automation.sjtu.edu.cn/wdzhang/">Prof. Weidong Zhang</a>. Before that, I received my B.S. degree in Automation from <a href="https://ev.buaa.edu.cn/">Beihang University</a>, Beijing, China.</p>
 <h2>Research Interests</h2>
 <p>Decision making and control under uncertainty, including but not limited to: Reinforcement Learning, Optimal Control, Motion Planning, Computational Geometry, Combinatorial Optimization.</p>
@@ -43,11 +43,11 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <div class="infoblock">
 <div class="blockcontent">
 <ul>
+<li><p><b>Apr. 5th 2023</b> I received the Dr. Li Annual ECE Publication Award in Electrical Engineering, New York University!</p>
+</li>
 <li><p><b>Apr. 8th 2022</b> I received the the Dante Youla Award for Graduate Research Excellence in Electrical Engineering, New York University!</p>
 </li>
 <li><p><b>Apr. 8th 2022</b> I received the Alexander Hessel Award for the Best Ph.D. Dissertation in Electrical Engineering, New York University!</p>
-</li>
-<li><p><b>Oct. 22nd 2021</b> I was selected as a member of Doctor Management Trainee (DMT) program at <a href="https://corporate.jd.com/">JD.COM, Inc</a>!</p>
 </li>
 </ul>
 </div></div>
@@ -56,7 +56,7 @@ Follow me on: <a href="https://scholar.google.com/citations?user=KqEVzM4AAAAJ&am
 <p><a href="https://info.flagcounter.com/vt4v"><img src="https://s05.flagcounter.com/count2/vt4v/bg_FFFFFF/txt_000000/border_CCCCCC/columns_8/maxflags_20/viewers_0/labels_1/pageviews_1/flags_0/percent_0/" alt="Flag Counter" border="0"></a></p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-11 14:08:43 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-05 12:45:57 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
