--- a/publication.html
+++ b/publication.html
@@ -21,6 +21,9 @@
 <h1>Publications</h1>
 </div>
 <h2>Papers Submitted</h2>
+<p><i>Reinforcement-Learning-Based Risk-Sensitive Optimal Feedback Mechanisms of Biological Motor Control.</i><br />
+Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
+2023 IEEE 62nd Conference on Decision and Control (CDC2023), Under Review.</p>
 <p><i>Learning-Based Adaptive Optimal Control of Linear Time-Delay Systems: A Policy Iteration Approach.</i><br />
 Leilei Cui, <b>Bo Pang</b>, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Under Review. [<a href="https://arxiv.org/pdf/2210.00204.pdf">Preprint</a>]</p>
@@ -38,7 +41,7 @@ IEEE Transactions on Automatic Control, Accepted, 2022.</p>
 <p><i>Human Motor Learning is Robust to Control-Dependent Noise.</i> [<a href="https://link.springer.com/article/10.1007/s00422-022-00922-z">Link</a>]
 [<a href="https://github.com/bo-pang/Sensorimotor_Control">Code</a>]<br />
 <b>Bo Pang</b>, Leilei Cui and Zhong-Ping Jiang.<br />
-Biological Cybernetics, 2022.</p>
+Biological Cybernetics, 2022. <font color=red><b>Dr. Li Annual ECE Publication Award @ NYU.</b></font></p>
 <p><i>Robust Policy Iteration for Continuous-time Linear Quadratic Regulation.</i> [<a href="https://ieeexplore.ieee.org/document/9444823">Link</a>]<br />
 <b>Bo Pang</b>, Tao Bian, Zhong-Ping Jiang.<br />
 IEEE Transactions on Automatic Control, Early Access, 2021.</p>
@@ -96,7 +99,7 @@ Yadong Zhao, <b>Bo Pang</b>, Fei Ye, Weidong Zhang.<br />
 2016 35th Chinese Control Conference (CCC2016), pp. 7598&ndash;7603, Chengdu, China.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2023-03-11 14:08:43 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2023-04-05 12:45:57 China Standard Time, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
